# ogmarkup

./: .travis.yml  LICENSE  README.md  ogmarkup.cabal  stack.yaml
app/: Main.hs
bench/: Bench.hs  test.up
examples/: sample.up
src/Ogmarkup/: Ast.hs  Config.hs  HTML.hs  Parser.hs  Typography.hs
src/Ogmarkup/Private/: Ast.hs  Generator.hs  Parser.hs
src/Text/: Ogmarkup.hs
src/Text/Ogmarkup/: Config.hs  HTML.hs  Typography.hs
src/Text/Ogmarkup/Private/: Ast.hs  Config.hs  Generator.hs  Megaparser.hs  Parser.hs  Typography.hs
test/: GeneratorSpec.hs  MegaSpec.hs  OgmarkupSpec.hs  Parser.hs  ParserSpec.hs  Spec.hs
