name:                ogmarkup
version:             0.1.0.0
synopsis:            Language Markup Parser for Ogma
description:         Please see README.md
homepage:            http://gitlab.com/ogma/ogmarkup
license:             MIT
license-file:        LICENSE
author:              Iky
maintainer:          hi@ikyushii.eu
copyright:           2016 Iky
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ogmarkup.Private.Parser,
                       Ogmarkup.Private.Ast
                       Ogmarkup.Private.Generator,
                       Ogmarkup.Typography,
                       Ogmarkup.Config,
                       Ogmarkup.HTML
  build-depends:       base >= 4.7 && < 5, parsec == 3.1.9,
                       mtl, text, shakespeare
  default-language:    Haskell2010

test-suite ogmadown-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, hspec,
                       ogmarkup, parsec, text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable ogmarkup
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base, ogmarkup, parsec, text, shakespeare
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/ogma/ogmarkup
