name: ogmarkup
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: 2016 Iky
maintainer: hi@ikyushii.eu
homepage: http://gitlab.com/ogma/ogmarkup
synopsis: Language Markup Parser for Ogma
description:
    Please see README.md
category: Web
author: Iky

source-repository head
    type: git
    location: https://github.com/ogma-project/ogmarkup

library
    exposed-modules:
        Text.Ogmarkup
        Text.Ogmarkup.Private.Parser
        Text.Ogmarkup.Private.Ast
        Text.Ogmarkup.Private.Generator
        Text.Ogmarkup.Typography
        Text.Ogmarkup.Config
        Text.Ogmarkup.HTML
    build-depends:
        base >=4.7 && <5,
        parsec ==3.1.9,
        mtl -any,
        text -any,
        shakespeare -any
    default-language: Haskell2010
    hs-source-dirs: src

executable ogmarkup
    main-is: Main.hs
    build-depends:
        base -any,
        ogmarkup -any,
        parsec -any,
        text -any,
        shakespeare -any
    default-language: Haskell2010
    hs-source-dirs: app

test-suite ogmadown-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        hspec -any,
        ogmarkup -any,
        parsec -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
